@@ -111,7 +111,7 @@ cmp_deeply(
         map { $_ => notexists(keys %network_plugins, Dist::Zilla::Util->expand_config_package_name('BlockRelease')) }
             qw(requires recommends suggests),
     },
-    'no network-using plugins, nor BlockRelease, were added to develop prereqs',
+    'no network-using plugins, nor BlockRelease, were added to plugin prereqs',
 );
 
 like(
