@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - new 'plugin_prereq_phase' and 'plugin_prereq_relationship'
+            configuration options, which control whether and how to inject
+            plugins used by this bundle into distribution prerequisites
 
 0.132     2017-12-13 07:15:09Z
           - fix test to work with [@Git::VersionManager] 0.003
